<resources>
    <string name="app_name">Login Form</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Enter your Email:</string>
    <string name="enter_your_password">Enter your password:</string>
    <string name="logged_in">Logged in</string>
    <string name="john">Name: John</string>
    <string name="job_id_5679">Job Id: 5679</string>
    <string name="dept_it">Dept: IT</string>
    <string name="login_form">Login Form</string>
    <string name="list_of_users">List of Users</string>
</resources>