<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="96dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:clickable="true"
    android:elevation="10dp"
    android:background="@drawable/textviewshape"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userCard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        >

        <ImageView
            android:id="@+id/usrImage"
            android:layout_width="161dp"
            android:layout_height="98dp"
            android:src="@drawable/index"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/john"
            app:layout_constraintStart_toEndOf="@+id/usrImage"
            app:layout_constraintTop_toTopOf="@id/usrImage"
            />

        <TextView
            android:id="@+id/username"
            android:text="@string/job_id_5679"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textName"
            app:layout_constraintStart_toEndOf="@+id/usrImage"
            />

        <TextView
            android:id="@+id/email"
            android:text="@string/dept_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintStart_toEndOf="@+id/usrImage"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>